--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,14 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+.kotlin/
+
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/
+# .idea/modules.xml
+# .idea/jarRepositories.xml
+# .idea/compiler.xml
+# .idea/libraries/
 *.iws
 *.iml
 *.ipr
